# household-helper

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  mise.toml  pyproject.toml
core/: settings.py
functional_tests/: tests.py
household_helper/: asgi.py  settings.py  urls.py  wsgi.py
